--- a/vues/account/myAccount.html
+++ b/vues/account/myAccount.html
@@ -17,7 +17,7 @@
 <section>
     <div id="blocCompte">
         <p class="titre">Mes Informations</p>
-        <table class="oneOfTwoGrey">
+        <table class="oneOfTwoGrey" aria-label="table">
             <tr class="row">
                 <td class="texte">Nom :</td>
                 <td class="text2">{{ lastname }}</td>
